--- a/BMI_Calculator/Properties/Resources.resx
+++ b/BMI_Calculator/Properties/Resources.resx
@@ -121,4 +121,13 @@
   <data name="backbutton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backbutton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bmicalculator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmicalculator.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="backbutton1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backbutton1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmicalculator1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmicalculator1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
